export default {
  cereal: 'Cereal',
  legumes: 'Legumes',
  vegetable: 'Vegetable',
  plantProtein: 'Plant Protein',
  condiment: 'Condiment',
  sauce: 'Sauce',
  meat: 'Meat',
  poultry: 'Poultry',
  fish: 'Fish',
  seafood: 'Seafood',
  dairy: 'Dairy',
  cheese: 'Cheese',
  sugar: 'Sugar',
  spice: 'Spice',
  fruit: 'Fruit',
  oilAndFat: 'Oil and Fat',
  nutsAndSeeds: 'Nuts and Seeds',
  sweetener: 'Sweetener',
  bread: 'Bread',
  baking: 'Baking',
  topping: 'Topping',
};
